--- a/css/style.css
+++ b/css/style.css
@@ -182,70 +182,10 @@ p{line-height: 150%;margin-bottom: 2em;}
 }
 
 
- /*--===========
+ /*------------------
  end top player section
- ==============--*/
-
-
-/*--===========
- start goal player section
- ==============--*/
-.goal-player-full{
-    background-image: url(/images/abstract-background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.goal-player{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 10% 0%;
-}
-.player-goal h1{
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-size: 64px;
-    line-height: 80px;
-    color:#fff;
-}
-.goal{
-    padding:10px 10px;
-}
-.goal span{
-    font-size: 40px;
-    color: #fff;
-    text-align: center;
-    padding:10px;
-}
-.goal p{
-    display: inline-block;
-    font-size: 20px;
-    color: #fff;
-}
-.player-goal button{
-    width: 168px;
-    height: 44px;
-    border: none;
-    background-color: #E02C6D;
-}
-.player-goal a{
-    text-decoration: none;
-    font-size: 16px;
-    color:#fff;
-}
-
-.player img{
-    width: 550px;
-    height: 438px;
-}
-/*--===========
- end goal player section
- ==============--*/
-
-/*--===========
- start footer section
- ==============--*/
-
+ -------------------*/
+ 
 .footer{
     display:grid;
     grid-template-columns: repeat(1, 1fr);
@@ -285,6 +225,6 @@ p{line-height: 150%;margin-bottom: 2em;}
     height: 32px;
     color: #ddd;
 }
- /*--===========
+ /*------------------
  end footer section
- ==============--*/
+ ---------------*/
